--- a/greenThreats/EcoFriendlyBrands.html
+++ b/greenThreats/EcoFriendlyBrands.html
@@ -14,17 +14,28 @@
     </head>
     <body>
         <nav class="navbar">
-            <div class="logo">
-                <img src="./assets/logo-removebg-preview.png" alt />
-            </div>
+            <a
+                href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/index.html">
+                <div class="logo">
+                    <img src="./assets/logo-removebg-preview.png" alt />
+                </div>
+            </a>
             <ul class="navElementContainer">
-                <a href><li>Recycling Centres</li></a>
-                <a href> <li>Swap Hub</li></a>
-                <a href><li class="Eco-friendly">Eco-friendly Brands</li></a>
+                <a
+                    href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/recycling.html"><li>Recycling
+                        Centres</li></a>
+                <a
+                    href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/brand.html">
+                    <li>Swap Hub</li></a>
+                <a
+                    href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/EcoFriendlyBrands.html"><li>Eco-friendly
+                        Brands</li></a>
                 <a
                     href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/eduRes.html"><li>Educational
                         Resources</li></a>
-                <a href><li>Event Calender</li></a>
+                <a
+                    href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/EventCalender.html"><li>Event
+                        Calender</li></a>
 
             </ul>
         </nav>
@@ -154,11 +165,10 @@
                         <img src="./assets/logo-removebg-preview.png" alt />
                     </div>
                     <p>
-                        Recycle India Foundation is an NGO that works for
-                        purifying our
-                        environment and making our lives better by educating,
-                        promoting and
-                        working in recycling plastic and E-Wastes.
+                        Green Threads is an organisation promoting
+                        recycling and reusing of clothes, taking steps
+                        towards making a sustainable environment,
+                        giving clothes and fashion a unique area to explore...
                     </p>
                 </div>
                 <div class="footerContainer">
