--- a/greenThreats/index.html
+++ b/greenThreats/index.html
@@ -12,25 +12,51 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">
-        <img src="./assets/logo-removebg-preview.png" alt />
-      </div>
+      <a
+                href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/index.html">
+                
+                <div class="logo">
+                    <img src="./assets/logo-removebg-preview.png" alt />
+                </div>
+            </a>
       <ul class="navElementContainer">
-        <a href><li>Recycling Centres</li></a>
-        <a href> <li>Swap Hub</li></a>
-        <a href><li>Eco-friendly Brands</li></a>
+        <a href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/recycling.html"><li>Recycling Centres</li></a>
+        <a href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/brand.html"> <li>Swap Hub</li></a>
+        <a href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/EcoFriendlyBrands.html"><li>Eco-friendly Brands</li></a>
         <a
           href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/eduRes.html"><li>Educational
             Resources</li></a>
-        <a href><li>Event Calender</li></a>
+        <a href="file:///C:/myProjects/greenThreads/greenThreads/greenThreats/EventCalender.html"><li>Event Calender</li></a>
 
       </ul>
     </nav>
     <div class="home">
+      <div class="slowgan">
+        Fashion With <br>a Purpose : <br>
+        Recycle <br> Your Closet ,<br>
+        Save <br> The Earth
 
+      </div>
+      <div class="oneLineInfo">
+        <div class="swapHub">
+          <h3>Swap Hub</h3>
+          <div class="swapInfo">
+            
+            Swap Hub is a Platform Providing an interchange of cloths for our users , elevating your wardrobe while sustaining Earth
+
+          </div></div>
+        <div class="swapHub">
+          <h3>Recycling Centres </h3>
+          <div class="swapInfo">
+            Recycling Centres - special space for recycling used clothes and Improving the Recycling Culture <br>
+          </div></div>
+        </div>
+      </div>
     </div>
     <div class="row1">
-
+      <div class="r1Container">
+        Green Threads, we are here so that you won't be buried under the pile of clothes....!!!Not hoodies nor cargos, Recycling and Resue are the new trends. Get on the ride with Green Threads and be a part of the organisation taking stpes towards cleaner and sustainable fashion..
+      </div>
     </div>
     <footer class="footer">
       <div class="foot">
@@ -39,9 +65,10 @@
             <img src="./assets/logo-removebg-preview.png" alt />
           </div>
           <p>
-            Recycle India Foundation is an NGO that works for purifying our
-            environment and making our lives better by educating, promoting and
-            working in recycling plastic and E-Wastes.
+            Green Threads is an organisation promoting 
+              recycling and reusing of clothes, taking steps 
+              towards making a sustainable environment, 
+              giving clothes and fashion a unique area to explore...
           </p>
         </div>
         <div class="footerContainer">
