--- a/greenThreats/EventCalender.html
+++ b/greenThreats/EventCalender.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Recycling Centers</title>
-        <link rel="stylesheet" href="recyclinh.css">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Green Threads</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="EventCalender.css">
     </head>
     <body>
         <nav class="navbar">
@@ -33,52 +38,47 @@
 
             </ul>
         </nav>
-        <div class="home">
-            <div class="row01">
-                <div class="image"><img src="./assets/warehouse1.jpg" alt></div>
-                <div class="info">
-                    <div class="centerName">Mumbai Recycling Hub</div>
-                    <div class="adress">
-                        123 Blossom Street, Vasant Valley, Andheri West, Mumbai,
-                        400053, India</div>
-                    <div class="cenInfo">In the heart of Mumbai, a dedicated
-                        recycling center thrives, specializing in the
-                        sustainable transformation of discarded clothes. This
-                        facility employs state-of-the-art technology to sort,
-                        clean, and process textiles, contributing to the city's
-                        environmental well-being. Committed to reducing textile
-                        waste, the center efficiently recycles fabrics, giving
-                        them a new lease on life. By promoting circular fashion,
-                        this Mumbai-based recycling hub exemplifies a crucial
-                        step towards a greener and more eco-conscious
-                        future.</div>
+        <div class="eventHome">
+            <div class="event1">
+                <div class="evimage">
+                    <img src="./assets/event1.jpg" alt>
+                </div>
+                <div class="evInfo">
+                    <div class="evName">Threads Revived</div>
+                    <div class="evDate">15/02/2024</div>
+                    <div class="location"><i
+                            class="fa-solid fa-location-dot"></i>location :
+                        pune</div>
+                    <div class="evDesc">Threads revived is a special event
+                        happening at Tera Tribe swapping centre. In this event
+                        partcipants will have the opportunity to swap, donate
+                        and put up items for recycling at the Tera Tribe centre.
+                        The event encourages the sustainable fashion idea in the
+                        minds leading to cleaner fashion
+                    </div>
                 </div>
             </div>
-            <div class="row01">
-                <div class="image"><img
-                        src="https://i.pinimg.com/564x/27/50/37/275037a2d664efaadd33de456971ef0a.jpg"
-                        alt></div>
-                <div class="info">
-                    <div class="centerName">PushPanjali Tailors</div>
-                    <div class="adress">
-                        123 Harmony Street,
-                        Andheri West,
-                        Mumbai, Maharashtra,
-                        India.</div>
-                    <div class="cenInfo">Nestled in Mumbai's bustling
-                        neighborhood, meet Leena, an innovative lady tailor
-                        weaving magic on Harmony Street. Leena crafts exquisite
-                        dresses with a unique touch, utilizing recycled sarees.
-                        Her sustainable approach not only creates stunning
-                        garments but also contributes to reducing textile waste.
-                        Clients flock to her studio, drawn by the allure of
-                        eco-friendly fashion that embodies both style and
-                        conscience. Leena's commitment to repurposing materials
-                        showcases a harmonious blend of creativity and
-                        environmental responsibility, making her a trendsetter
-                        in the world of recycled couture.</div>
+            <div class="event1">
+                <div class="evimage">
+                    <img src="./assets/event2.jpg" alt>
+                </div>
+                <div class="evInfo">
+                    <div class="evName">Trade-off Trend</div>
+                    <div class="evDate">01/03/2024</div>
+                    <div class="location"><i
+                            class="fa-solid fa-location-dot"></i>location :
+                        Santacruz,Mumbai</div>
+                    <div class="evDesc"> This year's most awaited event has
+                        finally landed..!! Trade-off Trend is happening at
+                        'Trend Twist Trading Post'. Trade, swap, barter any
+                        apparel you want. Attend the full event and get goodies
+                        and special offers from the 'Trend Twist Trading Post'.
+                        Be a part of the Trade-off Trend and take strides
+                        towards green fashion
+                    </div>
                 </div>
             </div>
+
         </div>
         <footer class="footer">
             <div class="foot">
